Fix waybar, cleanup

--- a/hypr/hyprKeys.conf
+++ b/hypr/hyprKeys.conf
@@ -8,8 +8,8 @@ $menu = dmenu_path | wmenu -bi -l 10 -p 'dmenu_path | wmenu' | xargs hyprctl dis
 #bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 
 ## Brightness keys 
-bindl = $s, XF86MonBrightnessUp, exec, hyprctl keyword monitors
-bindl = $s, XF86MonBrightnessDown, exec, hyprctl keyword monitors
+#bindl = $s, XF86MonBrightnessUp, exec, hyprctl keyword monitors
+#bindl = $s, XF86MonBrightnessDown, exec, hyprctl keyword monitors
 bindle=, XF86MonBrightnessUp, exec, light -A 1
 bindle=, XF86MonBrightnessDown, exec, light -U 3
 bindle=, XF86KbdBrightnessUp, exec, light -s sysfs/leds/smc::kbd_backlight -A 1
@@ -29,11 +29,12 @@ bindl=, XF86AudioPrev, exec, playerctl previous
 
 # Programs
 bind = $s, return, exec, kitty
-bind = $s, Q, killactive,
-bind = $s SHIFT, Q, exit, 
+bind = $s, Q, killactive
+bind = $s SHIFT, Q, exit
 bind = $s, C, exec, kitty --title 'Config Files' sudo hx --working-dir ~/.config/
-bind = $s, D, exec, $menu
+bind = $s, Space, exec, $menu
 bind = $s, R, exec, kanshictl reload
+bind = $s, Y, exec, cliphist list | dmenu | cliphist decode | wl-copy
 
 # Layout
 bind = $s, P, pseudo, # dwindle
