--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,10 +1,10 @@
-# monitor=,preferred,auto,auto
+monitor=,preferred,auto,auto
 
-#monitors {
-	#monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120Hz, 1200x240, 1.33, bitdepth,10
-	#monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 0x0, 1, transform, 1
-	#monitor=eDP-1, disable, 2560x1600, 960x1152, 2
-#}
+monitors {
+	monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120Hz, 1200x240, 1, bitdepth,10
+	monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 0x0, 1, transform, 1
+	monitor=eDP-1, disable, 2560x1600, 960x1152, 2
+}
 
 
 exec-once = /home/c/user-logged-in-wayland.sh
