--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,4 +1,8 @@
 [[language]]
+name = 'fish'
+indent = { tab-width = 3, unit = '\t' }
+
+[[language]]
 name = 'go'
 auto-format = true
 formatter = { command = 'goimports' }
