--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 linux_display_server wayland
-shell .
+shell fish
 editor .
 shell_integration enabled
 
@@ -102,9 +102,9 @@ map ctrl+down neighboring_window down
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Rosé Pine
 include current-theme.conf
 # END_KITTY_THEME
 
 background_opacity 1
-background #000000
+# background #000000
